fix: button text contrast

--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -22,7 +22,7 @@
   background-color: $color-main-1;
   border-radius: 8px;
   border: 2px solid transparent;
-  color: hsl(336, 8%, 20%);
+  color: $color-back-0;
   font-size: $font-size-m;
   font-weight: 700;
   margin-bottom: -1px;
